# job_finder

./: docker-compose.yml
backend/: Dockerfile  README.md  main.py  migrate_level.py  migrate_recency.py  pyproject.toml
backend/app/: database.py  models.py
backend/app/agent/: graph.py  llm_factory.py  nodes.py  state.py
backend/app/api/: endpoints.py
backend/app/services/: browser_apply.py  job_search.py  resume_parser.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentControls.tsx  AgentDashboard.tsx  JobPreferences.tsx  JobSearch.tsx  Login.tsx  ProfileSettings.tsx  ResumeUpload.tsx
