[project]
name = "job-finder"
version = "0.1.0"
description = "Job finder application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlmodel>=0.0.27",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
]
